syntax = "proto3";

package core.registry.v1;

import "core/aggregates/v1/registry.proto";

option go_package = "github.com/jgkawell/galactus/api/gen/go/core/registry/v1";

service Registry {
  // Register registers a new microservice with the registry.
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  // Deregister deregisters a microservice from the registry.
  // rpc Deregister(DeregisterRequest) returns (DeregisterResponse) {}

  // Connection returns the connection info for a microservice.
  // Example: Service A wishes to call Service B, A calls registry.Connection(B)
  //          which returns the connection info for B. If B is not available or
  //          not registered, an error will be returned.
  rpc Connection(ConnectionRequest) returns (ConnectionResponse) {}
  // TODO: this will be ingested by the local proxy at bootup
  // Connections returns the connection info for all microservices.
  // rpc Connections(ConnectionsRequest) returns (ConnectionsResponse) {}
}

// REGISTER

message RegisterRequest {
  string name = 1;
  string domain = 2; // this needs to match the k8s namespace for remote deployments
  string version = 3; // should be semver (vX.Y.Z)
  string description = 4;

  repeated ProtocolRequest protocols = 5;
  repeated ConsumerRequest consumers = 6;
}

message ProtocolRequest {
  core.aggregates.v1.ProtocolKind kind = 1;
  string route = 2;
}

message ConsumerRequest {
  core.aggregates.v1.ConsumerKind kind = 1;
  int32 order = 2;
  string aggregate_type = 3;
  string event_type = 4;
  string event_code = 5;
}

message RegisterResponse {
  repeated ProtocolResponse protocols = 1;
  repeated ConsumerResponse consumers = 2;
}

message ProtocolResponse {
  core.aggregates.v1.ProtocolKind kind = 1;
  int32 port = 2;
}

message ConsumerResponse {
  core.aggregates.v1.ConsumerKind kind = 1;
  // lookup information for the caller
  int32 order = 2;
  // new connection info for the caller
  string routing_key = 3;
  string exchange = 4;
  string queue_name = 5;
}

// CONNECTION

message ConnectionRequest {
  string name = 1;
  // this is the major version of the service to connect to (v1, v2, etc.)
  string version = 2;
  core.aggregates.v1.ProtocolKind type = 3;
  // TODO: add domain
}

message ConnectionResponse {
  string address = 1;
  int32 port = 2;
  ServiceStatus status = 3;
}

enum ServiceStatus {
  SERVICE_STATUS_INVALID_UNSPECIFIED = 0;
  SERVICE_STATUS_HEALTHY = 1;
  SERVICE_STATUS_UNHEALTHY = 2;
}
